feat!: add async request to arduino